--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,8 +1,16 @@
 h1 {
-	color: darkblue;
-	font-size: 24px;
+  color: darkblue;
+  font-size: 26px;
+}
+
+.navbar {
+  width: 100%;
 }
 
 body {
-	background: #f4f4f4;
+  background: #f4f4f4;
+}
+
+.homeText {
+  font-size: 18px;
 }
